fixed player's score visibility in media query

--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ section {
 
 .p1score,
 .p2score {
-  margin: auto 50px;
-  font-family: cursive;
+  margin: auto 40px;
+  font-family: sans-serif;
   font-size: 24px;
   font-weight: bold;
   text-align: center;
@@ -42,7 +42,7 @@ section {
 
 #player1Score,
 #player2Score {
-  font-size: 40px;
+  font-size: 30px;
   text-align: right;
 }
 
@@ -164,17 +164,24 @@ back of the card. */
   }
 
   .p1score {
-    display: none;
-    /* position: absolute;
-    bottom: 30%;
-    font-size: 14px; */
+    /* display: none; */
+    position: absolute;
+    top: 7%;
+    font-size: 12px;
+    color: lightsalmon
   }
 
   .p2score {
-    display: none;
-    /* position: absolute;
-    bottom: 30%;
+    /* display: none; */
+    position: absolute;
+    top: 7%;
     left: 50%;
-    font-size: 14px; */
+    font-size: 12px;
+    color: lightseagreen
+  }
+
+  #player1Score,
+  #player2Score {
+    font-size: 20px;
   }
 }
